--- a/app/giftcard/view/admin/setting.html
+++ b/app/giftcard/view/admin/setting.html
@@ -76,6 +76,11 @@
         <td><{input type=text name='fee_rate' value=$giftcard_setting.fee_rate size="60"}></td>
         <td></td>
       </tr>
+	  <tr>
+        <th><{t}>可兑换门店：<{/t}></th>
+        <td><{input type=textarea name='offline_store' value=$giftcard_setting.offline_store style="width:200px;height:100px;"}></td>
+        <td></td>
+      </tr>
 	
     </tbody>
   </table>
