--- a/app/giftcard/view/admin/setting.html
+++ b/app/giftcard/view/admin/setting.html
@@ -31,6 +31,12 @@
         <td><{input type=text name='jingtoken' value=$giftcard_setting.jingtoken size="60"}></td>
         <td></td>
       </tr>
+	    <tr>
+        <th><{t}>测试卡劵Code<{/t}></th>
+        <td>
+		<{input type=textarea name='refuse_code' value=$giftcard_setting.refuse_code style="width:200px;height:100px;"}></td>
+        <td></td>
+      </tr>
 	 </tbody>
 	</table>
 	  <table class="tableform" style="width:99%;">
