--- a/app/omeftp/view/admin/ax/setting.html
+++ b/app/omeftp/view/admin/ax/setting.html
@@ -91,6 +91,20 @@
           <span class="notice-inline"></span>
         </td>
       </tr>
+	  
+	    <tr>
+        <th><{t}>MCD礼品卡货号：<{/t}></th>
+        <td><{input type="text" name='ax_mcd_sample_bn' value=$ax_setting.ax_mcd_sample_bn size="40"}>      
+          <span class="notice-inline"></span>
+        </td>
+      </tr>
+	  
+	  <tr>
+        <th><{t}>MCD包装货号：<{/t}></th>
+        <td><{input type="text" name='ax_mcd_package_bn' value=$ax_setting.ax_mcd_package_bn size="40"}>      
+          <span class="notice-inline"></span>
+        </td>
+      </tr>
 
 	 <tr>
         <th><{t}>AX文件前缀：<{/t}></th>
