--- a/app/ome/view/admin/return_product/create_return.html
+++ b/app/ome/view/admin/return_product/create_return.html
@@ -5,8 +5,11 @@
     <h4>第一步:请选择售后类型</h4>
       <table width="100%" border="0" cellpadding="0" cellspacing="0" class="girdlist">
        
+	 <tr>
+		<td style="text-align:left;"><input type="radio" name='return_type' value='reship' id="reship" style="margin:0 0 0 50px;"><label for="reship">&nbsp&nbsp退货单</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="radio" name='return_type' value='rchange' id="rchange"><label for="rchange">&nbsp&nbsp换货单</label></td>
+	 </tr>
         
-        <tr><td style="text-align:right;"><input type="radio" name='return_type' value='return-apply'></td><td>售后申请</td><td style="text-align:right;"><input type="radio" name='return_type' value='reship'></td><td>退货单</td><td style="text-align:right;"><input type="radio" name='return_type' value='rchange'></td><td>换货单</td><td style="text-align:right;"><input type="radio" name='return_type' value='refund'></td><td>退款申请单</td></tr>
+        <!--<tr><td style="text-align:right;"><input type="radio" name='return_type' value='return-apply'></td><td>售后申请</td><td style="text-align:right;"><input type="radio" name='return_type' value='reship'></td><td>退货单</td><td style="text-align:right;"><input type="radio" name='return_type' value='rchange'></td><td>换货单</td><td style="text-align:right;"><input type="radio" name='return_type' value='refund'></td><td>退款申请单</td></tr>-->
         
       </table>
       
