+#LVMH-35 Dior：WMS接口触发及ribbon,MCD,单据状态更新magento等修改

--- a/app/qmwms/view/admin/setting.html
+++ b/app/qmwms/view/admin/setting.html
@@ -40,6 +40,14 @@
                 <td><{input type="text" name="sample_bn" value=$qmwmsApi.sample_bn size="40" id="sampleBn"}></td>
             </tr>
             <tr>
+                <th>MCD礼品卡货号：</th>
+                <td><{input type="text" name="mcd_sample_bn" value=$qmwmsApi.mcd_sample_bn size="40" id="mcdSampleBn"}></td>
+            </tr>
+            <tr>
+                <th>MCD包装货号：</th>
+                <td><{input type="text" name="mcd_package_sku" value=$qmwmsApi.mcd_package_sku size="40" id="mcdPackageSku"}></td>
+            </tr>
+            <tr>
                 <th>&nbsp;</th>
                 <td><{button type="submit" label="保存" }></td>
             </tr>
