--- a/app/ome/view/admin/system/setting/tab_other.html
+++ b/app/ome/view/admin/system/setting/tab_other.html
@@ -71,6 +71,12 @@
                     </select>
                 </td>
             </tr>
+	    <tr>
+            <th>支付宝回调URL：</th>
+                <td>
+                    <input type="text" name="set[ome.alipay.url]" value="<{$setData.ome_alipay_url}>" size="50">
+                </td>
+            </tr>
         </tbody>
     </table>
 </div>
