--- a/app/omeftp/view/admin/ax/setting.html
+++ b/app/omeftp/view/admin/ax/setting.html
@@ -105,7 +105,14 @@
           <span class="notice-inline"></span>
         </td>
       </tr>
-
+    
+          <tr>
+        <th><{t}>CVD礼品卡货号：<{/t}></th>
+        <td><{input type="text" name='ax_cvd_sample_bn' value=$ax_setting.ax_cvd_sample_bn size="40"}>      
+          <span class="notice-inline"></span>
+        </td>
+      </tr>
+      
 	 <tr>
         <th><{t}>AX文件前缀：<{/t}></th>
         <td><{input type="text" name='ax_file_prefix' value=$ax_setting.ax_file_prefix size="40"}>      
