--- a/app/qmwms/view/admin/setting.html
+++ b/app/qmwms/view/admin/setting.html
@@ -48,6 +48,10 @@
                 <td><{input type="text" name="mcd_package_sku" value=$qmwmsApi.mcd_package_sku size="40" id="mcdPackageSku"}></td>
             </tr>
             <tr>
+                <th>CVD礼品卡货号：</th>
+                <td><{input type="text" name="cvd_sample_bn" value=$qmwmsApi.cvd_sample_bn size="40" id="cvd_sample_bn"}></td>
+            </tr>
+            <tr>
                 <th>&nbsp;</th>
                 <td><{button type="submit" label="保存" }></td>
             </tr>
