--- a/app/ome/view/admin/goods/detail/spec/nospec.html
+++ b/app/ome/view/admin/goods/detail/spec/nospec.html
@@ -71,6 +71,12 @@ function checkRelationInfo() {
     </td>
   </tr>
   <tr>
+    <th><{t}>短号：<{/t}></th>
+    <td><input type="text" class="x-input"  value="<{$product.short_bn}>" id="duanhao" name="goods[product][0][short_bn]" maxlength="30" /> 
+
+    </td>
+  </tr>
+  <tr>
       <th><{t}>条形码：<{/t}></th>
       <td><input type="text" class="x-input" value="<{$product.barcode}>" id="tiaoxm" name="goods[product][0][barcode]"  />
        <{img id="copy" title="复制货号" class="pointer" src="icons/paste.gif"}>
