--- a/app/ome/view/admin/order/products/pkg_view.html
+++ b/app/ome/view/admin/order/products/pkg_view.html
@@ -15,7 +15,8 @@
           <th><{t}>优惠额<{/t}></th>
           <th><{t}>购买量<{/t}></th>          <th><{t}>已发货量<{/t}></th>
           <th><{t}>已退货量<{/t}></th>
-		  <th><{t}>刻字内容<{/t}></th>
+	  <th><{t}>刻字内容<{/t}></th>
+          <th><{t}>刻字类型<{/t}></th>
         </tr>
       </thead>
       <tbody>
@@ -51,6 +52,7 @@
           <td><{$item.sendnum}></td>
           <td><{$item.return_num}></td>
 	   <td><{$item.message1}></td>
+          <td><{$item.lettering_type}></td>
         </tr>
         <{/foreach}>
         <{/foreach}>
