--- a/app/creditorderapi/view/admin/ax/detail.html
+++ b/app/creditorderapi/view/admin/ax/detail.html
@@ -1,5 +1,5 @@
 <form id="brandForm" action="index.php?app=creditorderapi&ctl=admin_apiconfig&act=save"  method="post">
-    <input type="hidden" name="ax_id" value="<{$axSetting.ax_id}>">
+    <input type="hidden" name="ax_id" value="<{$apiconfig.ax_id}>">
     <div class="tableform">
         <div class="division">
             <table width="100%" border="0" cellpadding="0" cellspacing="0">
@@ -19,75 +19,75 @@
                 <!--<tr>
                     <th><{t}>店铺code：<{/t}></th>
                     <td>
-                        <{input name="brand_code" value=$axSetting.brand_code id="brand_code" }>
+                        <{input name="brand_code" value=$apiconfig.brand_code id="brand_code" }>
                     </td>
                 </tr>-->
                 <tr>
                     <th><{t}>secret_key：<{/t}></th>
-                    <td><{input type="text" name='secret_key' value=$axSetting.secret_key size="40"}>
+                    <td><{input type="text" name='secret_key' value=$apiconfig.secret_key size="40"}>
                         <span class="notice-inline">secret_key</span>
                     </td>
                 </tr>
                 <tr>
                     <th><{t}>crm_api_requesturl：<{/t}></th>
-                    <td><{input type="text" name='crm_api_requesturl' value=$axSetting.crm_api_requesturl size="40"}>
+                    <td><{input type="text" name='crm_api_requesturl' value=$apiconfig.crm_api_requesturl size="40"}>
                         <span class="notice-inline">请求CRM的接口地址</span>
                     </td>
                 </tr>
                 <!--AX信息相关--->
                 <tr>
                     <th><{t}>AX_header：<{/t}></th>
-                    <td><{input type="text" name='ax_header' value=$axSettingInfo.ax_header size="40"}>
+                    <td><{input type="text" name='ax_header' value=$apiconfigInfo.ax_header size="40"}>
                         <span class="notice-inline">AX文件第一行数据</span>
                     </td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H：<{/t}></th>
-                    <td><{input type="text" name='ax_h' value=$axSettingInfo.ax_h size="40"}></td>
+                    <td><{input type="text" name='ax_h' value=$apiconfigInfo.ax_h size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_sales_country_code：<{/t}></th>
-                    <td><{input type="text" name='ax_h_sales_country_code' value=$axSettingInfo.ax_h_sales_country_code size="40"}></td>
+                    <td><{input type="text" name='ax_h_sales_country_code' value=$apiconfigInfo.ax_h_sales_country_code size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_salas_division：<{/t}></th>
-                    <td><{input type="text" name='ax_h_salas_division' value=$axSettingInfo.ax_h_salas_division size="40"}></td>
+                    <td><{input type="text" name='ax_h_salas_division' value=$apiconfigInfo.ax_h_salas_division size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_sales_organization：<{/t}></th>
-                    <td><{input type="text" name='ax_h_sales_organization' value=$axSettingInfo.ax_h_sales_organization size="40"}></td>
+                    <td><{input type="text" name='ax_h_sales_organization' value=$apiconfigInfo.ax_h_sales_organization size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_plant：<{/t}></th>
-                    <td><{input type="text" name='ax_h_plant' value=$axSettingInfo.ax_h_plant size="40"}></td>
+                    <td><{input type="text" name='ax_h_plant' value=$apiconfigInfo.ax_h_plant size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_customer_account：<{/t}></th>
-                    <td><{input type="text" name='ax_h_customer_account' value=$axSettingInfo.ax_h_customer_account size="40"}></td>
+                    <td><{input type="text" name='ax_h_customer_account' value=$apiconfigInfo.ax_h_customer_account size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_invoice_ccount：<{/t}></th>
-                    <td><{input type="text" name='ax_h_invoice_ccount' value=$axSettingInfo.ax_h_invoice_ccount size="40"}></td>
+                    <td><{input type="text" name='ax_h_invoice_ccount' value=$apiconfigInfo.ax_h_invoice_ccount size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_sales_order_status：<{/t}></th>
-                    <td><{input type="text" name='ax_h_sales_order_status' value=$axSettingInfo.ax_h_sales_order_status size="40"}></td>
+                    <td><{input type="text" name='ax_h_sales_order_status' value=$apiconfigInfo.ax_h_sales_order_status size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_H_currency：<{/t}></th>
-                    <td><{input type="text" name='ax_h_currency' value=$axSettingInfo.ax_h_currency size="40"}></td>
+                    <td><{input type="text" name='ax_h_currency' value=$apiconfigInfo.ax_h_currency size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_D_mode_of_delivery：<{/t}></th>
-                    <td><{input type="text" name='ax_d_mode_of_delivery' value=$axSettingInfo.ax_d_mode_of_delivery size="40"}></td>
+                    <td><{input type="text" name='ax_d_mode_of_delivery' value=$apiconfigInfo.ax_d_mode_of_delivery size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX_file_brand：<{/t}></th>
-                    <td><{input type="text" name='ax_file_brand' value=$axSettingInfo.ax_file_brand size="40"}></td>
+                    <td><{input type="text" name='ax_file_brand' value=$apiconfigInfo.ax_file_brand size="40"}></td>
                 </tr>
                 <tr>
                     <th><{t}>AX文件前缀：<{/t}></th>
-                    <td><{input type="text" name='ax_file_prefix' value=$axSetting.ax_file_prefix size="40"}></td>
+                    <td><{input type="text" name='ax_file_prefix' value=$apiconfig.ax_file_prefix size="40"}></td>
                 </tr>
             </table>
         </div>
