feature-LVMH-90 单点登录改造

--- a/app/desktop/view/users/users_add.html
+++ b/app/desktop/view/users/users_add.html
@@ -70,6 +70,19 @@
             </td>
           </tr>
 
+		  <tr>
+            <th>
+              <em class="red">*</em>
+              <label><{t}>所属系统：<{/t}></label>
+            </th>
+            <td>
+              <select id="dom_el_ea78c46" required="1" name="sys_type" type="select" title="<{t}>系统：<{/t}>" class="x-input-select inputstyle">
+                <option value="local"><{t}>本系统<{/t}></option>
+                <option value="custom"><{t}>客服系统<{/t}></option>
+              </select>
+            </td>
+          </tr>
+
           <tr>
             <th></th>
             <td>
