--- a/app/desktop/view/loadpage.html
+++ b/app/desktop/view/loadpage.html
@@ -4,7 +4,7 @@
 <script>
 var shopeEvents = {},TaskRemote=null;
 W.page('<{$goto}>&dialog=true',{clearUpdateMap:false,onComplete:function(){
-		var modedialog=window.dialogArguments;		
+		var modedialog=window.modedialogInstance;	
 		if(modedialog)modedialog.onLoad.call(modedialog,window);
 		 window.resizeLayout();
 }});
